--- a/src/Page/Login/login.css
+++ b/src/Page/Login/login.css
@@ -1,165 +1,32 @@
-@import "https://unpkg.com/open-props/open-props.min.css";
-@import "https://unpkg.com/open-props/normalize.min.css";
-
-:root {
-  --red: hsl(18 100% 50%);
-  --green: hsl(130 52% 46%);
-  --yellow: hsl(44 83% 53%);
-  --blue: hsl(215 100% 53%);
-  --grey: hsl(0 0% 45%);
-  --text: var(--gray-5);
-  --transition: 0.2s;
-  --valid: var(--green);
-  --invalid: var(--red);
-  --focus: var(--yellow);
-  --blur: var(--gray-0);
-  --disabled: var(--grey);
-}
-
-:where(html) {
-    background-color: transparent;
-    color-scheme: none;
-  }
-
-.form-group {
-  --color: var(--blur);
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-label {
-  font-family: sans-serif;
-  font-weight: bold;
-  padding-right: 1rem;
+.wrong{
   transform-style: preserve-3d;
-  transition: color var(--transition);
-  color: var(--color);
-  font-size: 1.25rem;
- 
-}
-input {
-
-  border: 4px solid var(--color);
-  border-radius: 4px;
-  padding: 1rem 2rem;
-  font-weight: 400;
-  transition: border-color var(--transition);
+  animation: shake 0.2s; 
 }
 
-input:focus-visible {
-  outline-color: var(--color);
-}
-
-input::placeholder {
-  color: transparent;
-}
-
-button {
-  padding: 1rem 2rem;
-  border-radius: 4px;
-  border: 0;
-  cursor: pointer;
-  background: var(--disabled);
-  font-weight: bold;
-  font-size: 1.25rem;
-  color: var(--gray-5);
-  transition: color var(--transition), background var(--transition);
-}
-
-.form-group:has(:invalid) {
-  --color: var(--invalid);
-}
-
-.form-group:has(:focus) {
-  --color: var(--focus);
-}
-
-.form-group:has(:valid) {
-  --color: var(--valid);
-}
-
-@media (prefers-reduced-motion: no-preference) {
-
-
-  .form-group:has(:valid) label span {
-    display: inline-block;
-    animation: jump 0.25s calc(var(--char-index) * 0.05s);
+@keyframes shake {
+  0%, 100% {
+    transform: translateX(0);
+  } 
+  20%, 40%, 60%, 80% {
+    transform: translateX(-2%);
   }
-  @keyframes jump {
-    50% {
-      transform: translateY(-50%);
-    }
-  }
-
-
-  .form-group:has(:invalid:not(:focus):not(:placeholder-shown)) {
-    animation: shake 0.2s;
-  }
-  @keyframes shake {
-    0%, 100% {
-      transform: translateX(0);
-    } 
-    20%, 40%, 60%, 80% {
-      transform: translateX(-2%);
-    }
-    10%, 30%, 50%, 70%, 90% {
-      transform: translateX(2%);
-    }
+  10%, 30%, 50%, 70%, 90% {
+    transform: translateX(2%);
   }
 }
 
-.form-group:has(:placeholder-shown:not(:focus)) label span {
-  animation: none;
-}
-
-.form-group:has(:placeholder-shown) {
-  --color: var(--blur);
-}
-
-.form-group:has(:invalid:not(:focus):not(:placeholder-shown)) .form-group__error {
-  display: block;
-}
-
-.form-group__input {
-  position: relative;
-}
-
-.form-group__error {
-  display: none;
-  white-space: nowrap;
-  color: var(--red);
-  font-size: var(--font-size-0);
-  grid-row: 2;
-  grid-column: 2;
-  padding: var(--size-2);
-  text-align: center;
-}
-
-
-label span {
+.correct{
   display: inline-block;
+  transform-style: preserve-3d;
+  animation: jump 0.25s calc(var(--char-index) * 0.05s);
 }
 
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
+@keyframes jump {
+  50% {
+    transform: translateY(-50%);
+  }
 }
 
-/*.form-group:has(:valid) ~ .form-group:has(:valid) ~ [type="submit"] {
-  background: var(--valid);
-  color: var(--gray-1);
-}*/
-
-form:valid [type="submit"] {
-  background: var(--valid);
-  color: var(--gray-1);
-}
+/* outline-style: solid;
+outline-color: red;
+outline-width: thin; */
